Fix max modal width on mobile

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -2,6 +2,7 @@
   background-color: $color-white;
   box-shadow: 0 5px 15px $color-modal-shadow;
   margin: 5% auto;
+  max-width: 94vw;
   opacity: 0;
   outline: 0;
   width: 600px;
